# nonebot-plugin-7s-roll

./: README.md  pyproject.toml
nonebot_plugin_7s_roll/: __init__.py  command.py  common.py  config.py  expr.py  roll.py
tests/: __init__.py  test_roll_repl.py
